Fixed lat long issue, currently is displaying top 100 records. Will change this later

--- a/_excercise_/spacetravelagency/webapp/view/Dashboard.view.xml
+++ b/_excercise_/spacetravelagency/webapp/view/Dashboard.view.xml
@@ -8,7 +8,7 @@
 						regionContextMenu="onRegionContextMenu">
 						<vbm:vos>
 							<vbm:Routes items="{xsODataService>/AllAirportRoutes}">
-								<vbm:Route position="{parts: [{path: 'xsODataService>LATITUDE_START'}, {path: 'xsODataService>LONGITUDE_START'},{path: 'xsODataService>LATITUDE_DEST'}, {path: 'xsODataService>LONGITUDE_DEST'}], formatter: '.formatter.formatRoutes'}" color="rgb(117,148,34)" colorBorder="rgb(255,255,255)" linewidth="3" routetype="Geodesic"
+								<vbm:Route position="{parts: [{path: 'xsODataService>LONGITUDE_START'},{path: 'xsODataService>LATITUDE_START'},{path: 'xsODataService>LONGITUDE_DEST'},{path: 'xsODataService>LATITUDE_DEST'}], formatter: '.formatter.formatRoutes'}" color="rgb(117,148,34)" colorBorder="rgb(255,255,255)" linewidth="3" routetype="Geodesic"
 									click="onClickRoute" contextMenu="onContextMenuRoute"/>
 							</vbm:Routes>
 						</vbm:vos>
